# djapy

./: .eslintrc  .eslintrc.json  .gitignore  README.md  clean-generated-template-files.js  db.sqlite3  eslint.config.js  manage.py  package.json  pyproject.toml  webpack.config.dev.js  webpack.config.js  webpack.config.prod.js
djapy/: .env  asgi.py  settings.py  urls.py  wsgi.py
djapy/fixtures/: individuals.json
djapy_app/: apps.py  entity_api.py  managers.py  models.py  urls.py  views.py  views_dt.py
djapy_app/management/commands/: startup.py
rest_app/: admin.py  models.py  serializers.py  urls.py  views.py
rest_app/fixtures/: families.json
src/djapy_app/: index.ejs  page.ejs  page_dt.ejs
src/djapy_app/js/: index-dt.js  index-jq.js  index.js
src/djapy_app/pages/basic/: home.js  page_1.js  page_2.js
src/djapy_app/pages/dt/: families.js  individuals.js  individuals_async.js  page_2.js  some.js  test.js
src/djapy_app/script/: script.js
src/djapy_app/styles/: _style.scss  style.css
static/: script.js  style.css
templates/: families.html  home.html
templates/base/: base.html  navbar.html  table.html
